@@ -18,9 +18,9 @@
 
 VERSION      := 3
 SUBVERSION   := 1
-MINORVERSION := 11
-TARVERSION   := 3.1.11
-LIBVERSION   := 3.1.11
+MINORVERSION := 12
+TARVERSION   := 3.1.12
+LIBVERSION   := 3.1.12
 
 ############ vars
 
